--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* uncomment for "dark mode"
   background-color: black;
   color: white;
+  */
 }
 
 a {
